--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
-  "name": "fis3-parser-webpack",
+  "name": "fis-parser-webpack",
   "description": "A parser for fis to compile webpack module.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/zswang/fis3-parser-webpack.git"
+    "url": "https://github.com/nimojs/fis-parser-webpack.git"
   },
   "version": "0.0.5",
   "main": "lib/index.js",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/zswang/fis3-parser-webpack/issues"
-  },
-  "homepage": "https://github.com/zswang/fis3-parser-webpack",
-  "author": {
-    "name": "zswang",
-    "url": "http://weibo.com/zswang"
+
+  "peerDependencies": {
+      "webpack": "^1.13.1"
   },
   "dependencies": {
-    "webpack": "^1.13.1",
     "memory-fs": "^0.3.0",
     "proxy-fs": "^0.0.10",
     "deasync": "^0.1.3"
